<resources>
    <string name="app_name">MyRoom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="view">view</string>
    <string name="update">update</string>
    <string name="save">save</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="id">id</string>
</resources>
